# aws-boto-adapter

./: LICENSE  README.md  docs.drawio  inspect_cat.py  main.py  pyproject.toml  test.py
docs/project-docs/: Overview.md
docs/project-docs/.obsidian/: workspace.json
docs/project-docs/.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
docs/project-docs/Schemas/: Objective.excalidraw.md
src/: __init__.py  common.py  main.py  test.py
src/aws/: __init__.py  aws.py  main.py
src/aws/dtos/: __init__.py  base.py  s3.py  secretsmanager.py  ssm.py
src/aws/param_store/: __init__.py  base.py  dtos.py
src/aws/s3/: __init__.py  base.py  dtos.py
src/aws/secrets/: __init__.py  base.py  dtos.py
src/aws/ssm/: __init__.py  base.py  dtos.py  main.py
src/aws/ssm/dtos/: __init__.py  ssm.py
tests/: __init__.py  conftest.py  test_descriptor.py  test_my_aws.py  test_services.py
